package edu.fiuba.algo3.modelo.moduloDefensas;

public class EstructurasActivas {
    public void agregar(Object construir) {
    }
}
