package edu.fiuba.algo3.modeloNico.Defensas;

public interface Estructura{
    int costo();
}
